1999-07-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Check for win32 as well as winnt subdirectory.

1999-07-25  Alex Lancaster  <alex@santafe.edu>

	* acjdk.m4: Add explicit check for green and native threads in
	sparc-solaris case.

1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Don't look for defaults if no --with-{ffidir,ffcalldir}.

1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add check for native threads on HPUX (found on v11).

1999-07-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (tclLibrary): Check for tclsh8.1.

1999-07-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Add avcall-i386-msvc.lo in the case of cygwin.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4: Use AC_DEFINE, not AC_SUBST, since AC_CONFIG_HEADER
	can't handle substitutions.

	* acjdk.m4: Don't use Sun JDK wrapper script.  Add info
	for proc, threads type, and LD_LIBRARY_PATH variable name.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Ignore libffi on Sparc and ix86.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (USEBUILTINAVCALL): Add an automake conditional.

1999-06-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4 (md_FIND_FFI): If external libffi or ffcall are not
	found, don't abort; instead, set FFILIB as avcall.lo
	and FFIINCLUDES, FFILDFLAGS to local avcall build directory.
	Handle `no' for --with-ffidir and with-ffcalldir.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Add BLT24 as a libname.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4: Add USEDLL automake conditional.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Substitute ARGP_H to argp.h if it isn't found.

1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acargp.m4: Check for argp.h.
