@@ -1,5 +1,9 @@
 1999-07-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* Makefile.am (EXTRA_DIST): Add aclonglong.m4.
+
+	* aclonglong.m4: New file.
+
 	* acjdk.m4: Check for win32 as well as winnt subdirectory.
 
 1999-07-25  Alex Lancaster  <alex@santafe.edu>
